# mkdocs-code-validator

./: 404.html  README.md  index.html  mkdocs.yml  properdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
.tools/: ci.sh  copier-answers.yml  release.sh  test.sh
examples/bad/: mkdocs.yml  properdocs.yml
examples/bad/docs/: README.md
examples/good/: mkdocs.yml  properdocs.yml
examples/good/docs/: README.md
mkdocs_code_validator/: plugin.py
search/: search_index.json
