[tool.poetry]
name = "mkdocs-code-validator"
version = "0.1.3"
description = "Checks Markdown code blocks in a MkDocs site against user-defined actions"
authors = ["Oleh Prypin <oleh@pryp.in>"]
license = "MIT"
repository = "https://github.com/oprypin/mkdocs-code-validator"
keywords = ["mkdocs", "mkdocs-plugin"]
readme = "README.md"

[tool.poetry.plugins."mkdocs.plugins"]
code-validator = "mkdocs_code_validator.plugin:CodeValidatorPlugin"

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.3"
pymdown-extensions = ">=8.0"
mkdocs = "^1.0.3"

[tool.poetry.dev-dependencies]
black = {version = ">=20.8b1", markers = "python_version>='3.6.2'"}
isort = "^5.6.4"
autoflake = "^1.4"
pytype = {version = ">=2021.04.15", markers = "python_version>='3.6' and python_version<'3.9' and sys_platform!='win32'"}  # Skip on Windows

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
